[gd_scene load_steps=2 format=3 uid="uid://cbh6ruq1aqxno"]

[ext_resource type="Script" path="res://scripts/health_component.gd" id="1_khdux"]

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_khdux")

[node name="InvencibilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="InvencibilityTimer" to="." method="_on_invencibility_timer_timeout"]
